# aws-lambda-macroservice

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
api/: api.py  hello.py  main.py
infra/: cfn_api.yml
layer/: requirements.txt
macroservice/: api.py
postman/: api.tests.json  local.env.json  test.env.json
tests/: test_api.py
unit_tests/: test_macroservice.py
