[tool.poetry]
name = "macroservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.942"
boto3 = "^1.22.12"
moto = {extras = ["all"], version = "^3.1.9"}
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pkginfo = "^1.8.3"
fastapi = "0.77.1"
mangum = "0.15.0"
requests = "2.27.1"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

